--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -1,4 +1,19 @@
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a routerlink="employees" routerLinkActive="active" class="nav-link">Employee List</a>
+    </li>
+  </ul>
+</nav>
+
+
 <h1 class="text-center"> {{title}} </h1>
 <div class="container">
-  <app-employee-list></app-employee-list>
+  <router-outlet></router-outlet>
 </div>
+<footer class="footer">
+  <div class="container">
+    <span>Footer WIP</span>
+  </div>
+
+</footer>
