--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -3,6 +3,9 @@
     <li class="nav-item">
       <a routerlink="employees" routerLinkActive="active" class="nav-link">Employee List</a>
     </li>
+    <li class="nav-item">
+      <a routerlink="create-employee" routerLinkActive="active" class="nav-link">Create Employee</a>
+    </li>
   </ul>
 </nav>
 
