--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a routerlink="employees" routerLinkActive="active" class="nav-link">Employee List</a>
+      <a routerLink="employees" routerLinkActive="active" class="nav-link">Employee List</a>
     </li>
   </ul>
 </nav>
@@ -11,6 +11,7 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+
 <footer class="footer">
   <div class="container">
     <span>Footer WIP</span>
