--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a routerlink="employees" routerLinkActive="active" class="nav-link">Employee List</a>
+      <a routerLink="employees" routerLinkActive="active" class="nav-link">Employee List</a>
     </li>
     <li class="nav-item">
-      <a routerlink="create-employee" routerLinkActive="active" class="nav-link">Create Employee</a>
+      <a routerLink="create-employee" routerLinkActive="active" class="nav-link">Create Employee</a>
     </li>
   </ul>
 </nav>
