--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -17,7 +17,7 @@
 
 <footer class="footer">
   <div class="container">
-    <span>Footer WIP</span>
+    <span>Project by Thinh, Ronald, Granger and Ergin</span>
   </div>
 
 </footer>
